--- a/adminhome.html
+++ b/adminhome.html
@@ -15,6 +15,13 @@
 </head>
 
 <body>
+    <!-- Navbar on small screens -->
+    <nav id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:60px">
+        <a href="booking.html" class="navLink" onclick="navToggle()">BOOKING</a>
+        <a href="proposal.html" class="navLink" onclick="navToggle()">PROPOSAL</a>
+        <a href="signin.html" class="navLink">SIGN OUT</a>
+    </nav>
+
     <!-- Navbar -->
     <nav class="w3-top">
         <div class="w3-bar w3-card transparentNav">
@@ -25,15 +32,8 @@
             <!--<a href="index.html" class="navLink">HOME</a>-->
             <a href="booking.html" class="navLink w3-hide-small">BOOKING</a>
             <a href="proposal.html" class="navLink w3-hide-small">PROPOSAL</a>
-            <a href="signin.html" class="navLink signIn w3-hide-small">SIGN IN</a>
+            <a href="signin.html" class="navLink signIn w3-hide-small">SIGN OUT</a>
         </div>
-    </nav>
-
-    <!-- Navbar on small screens -->
-    <nav id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:75px">
-        <a href="booking.html" class="navLink" onclick="navToggle()">BOOKING</a>
-        <a href="proposal.html" class="navLink" onclick="navToggle()">PROPOSAL</a>
-        <a href="signin.html" class="navLink">SIGN IN</a>
     </nav>
 
     <div class="w3-black">
