Fixed Minor errors

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                         unjust imprisonment of over 120,000 Japanese American immigrants and citizens during WWII.
                         Today, we are seeing history repeat itself with the inhumane detention and racist treatment of
                         immigrants in our country. </p>
-                    <p>February 20th, 2020, 6:00-8:00pm at UW’s Intellectual House</p>
+                    <p>February 20th, 2020, 6:00-8:00pm</p>
+                    <p>UW’s Intellectual House</p>
                     <button class="basicButton w3-block w3-padding-16 w3-section w3-right"> ADD TO CALENDAR </button>
                     <button class="basicButton w3-section"
                         onclick="document.getElementById('eventModal-1').style.display='none'">Close <i
