add links and interactivity

--- a/adminbooking.html
+++ b/adminbooking.html
@@ -10,15 +10,18 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="js/index.js"></script>
-    <title>Booking Manager</title>
+    <title>Home</title>
 </head>
 
 <body>
     <!-- Navbar on small screens -->
     <nav id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:60px">
-        <a href="booking.html" class="navLink" onclick="navToggle()">BOOKING</a>
         <a href="proposal.html" class="navLink" onclick="navToggle()">PROPOSAL</a>
+        <a href="engage.html" class="navLink" onclick="navToggle()">ENGAGE</a>
+        <a href="booking.html" class="navLink" onclick="navToggle()">BOOKING</a>
+        <a href="about.html" class="navLink" onclick="navToggle()">ABOUT</a>
         <a href="signin.html" class="navLink">SIGN OUT</a>
     </nav>
 
@@ -29,8 +32,10 @@
                 title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
             <a href="index.html" class="navLink"><img src="img/logo-new.png" class="homeLogo"></a>
             <!--<a href="index.html" class="navLink">HOME</a>-->
-            <a href="booking.html" class="navLink w3-hide-small">BOOKING</a>
             <a href="proposal.html" class="navLink w3-hide-small">PROPOSAL</a>
+            <a href="engage.html" class="navLink w3-hide-small">ENGAGE</a>
+            <a href="booking.html" class="navLink w3-hide-small">BOOKING</a>
+            <a href="about.html" class="navLink w3-hide-small">ABOUT</a>
             <a href="signin.html" class="navLink signIn w3-hide-small">SIGN OUT</a>
         </div>
     </nav>
