--- a/engage.html
+++ b/engage.html
@@ -40,16 +40,14 @@
         </div>
     </nav>
 
-    <!-- Page Content -->
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px; margin-top:46px" id="intro">
-        <h2 class="w3-wide">Thank you for your booking!</h2>
-        <p class="w3-justify w3-center">
-            We greatly appreciate your interest in letting us to perform for you. We will get back to you soon.
-            Meanwhile, feel free to follow us on our social media!
-        </p>
-    </div>
-
-
+        <!-- Embedded Google Calendar -->
+        <div id="calendar" class="w3-display-container">
+            <div>
+                <iframe src="https://calendar.google.com/calendar/b/1/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=dXd0YWlrb0BnbWFpbC5jb20&amp;color=%233F51B5&amp;showTitle=1&amp;mode=MONTH&amp;title=Taiko%20Kai%20Schedule" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            </div>
+        </div>
+        
+    
     <!-- Footer -->
     <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
         <!-- Contact Taiko -->
@@ -58,8 +56,10 @@
             <div class="w3-row w3-center  w3-padding-32">
                 <div class="w3-col w3-large w3-margin-bottom">
                     <i class="fa fa-map-marker" style="width:30px"></i>Seattle, WA 98105 United States<br>
-                    <i class="fa fa-phone" style="width:30px"></i> Phone: 425-879-6802<br>
-                    <i class="fa fa-envelope" style="width:30px"> </i> Email: uwtaiko@gmail.com<br>
+                    <i class="fa fa-phone" style="width:30px"></i><a href="tel:425-879-6802">Phone: 425-879-6802</a>
+                    <br>
+                    <i class="fa fa-envelope" style="width:30px"> </i> <a href="mailto:uwtaiko@gmail.com">Email:
+                        uwtaiko@gmail.com</a><br>
                 </div>
             </div>
         </div>
@@ -69,7 +69,6 @@
         <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/taikokai/"></a>
         <a class="fa fa-youtube w3-hover-opacity" href="https://www.youtube.com/channel/UCfNit59pCLMfxQzRrVRrXTQ"></a>
         <p class="byline">&copy; Dorothy Lu & Aaron Zhao</p>
-        </p>
     </footer>
 </body>
 
