--- a/memberdatabase.html
+++ b/memberdatabase.html
@@ -9,58 +9,73 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <link rel="stylesheet" href="styles/styles.css">
-    <script src="js/index.js"></script>
-    <title>Admin Home</title>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js"></script>
+    <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="js/memberdata.js"></script>
+    <title>Home</title>
 </head>
 
 <body>
-    
-     <!-- Navbar on small screens -->
-     <nav id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:60px">
-        <a href="booking.html" class="navLink" onclick="navToggle()">BOOKING</a>
+    <!-- Navbar on small screens -->
+    <nav id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:60px">
         <a href="proposal.html" class="navLink" onclick="navToggle()">PROPOSAL</a>
+        <a href="engage.html" class="navLink" onclick="navToggle()">ENGAGE</a>
+        <a href="booking.html" class="navLink" onclick="navToggle()">BOOKING</a>
+        <a href="about.html" class="navLink" onclick="navToggle()">ABOUT</a>
         <a href="signin.html" class="navLink">SIGN OUT</a>
     </nav>
 
     <!-- Navbar -->
     <nav class="w3-top">
         <div class="w3-bar w3-card transparentNav">
-            <a class="navLink w3-hide-medium w3-hide-large w3-right"
-                href="javascript:void(0)" onclick="navToggle()" title="Toggle Navigation Menu"><i
-                    class="fa fa-bars"></i></a>
-            <a href="index.html" class="navLink" ><img src="img/logo-new.png" class="homeLogo"></a>
+            <a class="navLink w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="navToggle()"
+                title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+            <a href="index.html" class="navLink"><img src="img/logo-new.png" class="homeLogo"></a>
             <!--<a href="index.html" class="navLink">HOME</a>-->
-            <a href="booking.html" class="navLink w3-hide-small">BOOKING</a>
             <a href="proposal.html" class="navLink w3-hide-small">PROPOSAL</a>
+            <a href="engage.html" class="navLink w3-hide-small">ENGAGE</a>
+            <a href="booking.html" class="navLink w3-hide-small">BOOKING</a>
+            <a href="about.html" class="navLink w3-hide-small">ABOUT</a>
             <a href="signin.html" class="navLink signIn w3-hide-small">SIGN OUT</a>
         </div>
     </nav>
 
     <!-- Content Goes Here -->
-
-    <!-- Footer -->
-    <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-        <!-- Contact Taiko -->
-        <div class="w3-container w3-content" style="max-width:800px" id="contact">
-            <h2 class="w3-wide w3-center">CONTACT</h2>
-            <div class="w3-row w3-center  w3-padding-32">
-                <div class="w3-col w3-large w3-margin-bottom">
-                    <i class="fa fa-map-marker" style="width:30px"></i>Seattle, WA 98105 United States<br>
-                    <i class="fa fa-phone" style="width:30px"></i><a href="tel:425-879-6802">Phone: 425-879-6802</a>
-                    <br>
-                    <i class="fa fa-envelope" style="width:30px"> </i> <a href="mailto:uwtaiko@gmail.com">Email:
-                        uwtaiko@gmail.com</a><br>
-                </div>
+    <div class="container" style="padding:10px 10px;">
+        <h1 class="w3-wide" style="margin-top: 90px;">MEMBER DATA</h1>
+        <div class="well">
+            <div class="row" id="csv-display" style="height:500px;overflow: scroll;">
             </div>
         </div>
+    </div>
+</body>
 
-        <!-- Social Media Links -->
-        <a class="fa fa-facebook-official w3-hover-opacity" href="https://www.facebook.com/uwtaikokai/"></a>
-        <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/taikokai/"></a>
-        <a class="fa fa-youtube w3-hover-opacity" href="https://www.youtube.com/channel/UCfNit59pCLMfxQzRrVRrXTQ"></a>
-        <p class="byline">&copy; Dorothy Lu & Aaron Zhao</p>
-    </footer>
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+    <!-- Contact Taiko -->
+    <div class="w3-container w3-content" style="max-width:800px" id="contact">
+        <h2 class="w3-wide w3-center">CONTACT</h2>
+        <div class="w3-row w3-center  w3-padding-32">
+            <div class="w3-col w3-large w3-margin-bottom">
+                <i class="fa fa-map-marker" style="width:30px"></i>Seattle, WA 98105 United States<br>
+                <i class="fa fa-phone" style="width:30px"></i><a href="tel:425-879-6802">Phone: 425-879-6802</a>
+                <br>
+                <i class="fa fa-envelope" style="width:30px"> </i> <a href="mailto:uwtaiko@gmail.com">Email:
+                    uwtaiko@gmail.com</a><br>
+            </div>
+        </div>
+    </div>
+
+    <!-- Social Media Links -->
+    <a class="fa fa-facebook-official w3-hover-opacity" href="https://www.facebook.com/uwtaikokai/"></a>
+    <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/taikokai/"></a>
+    <a class="fa fa-youtube w3-hover-opacity" href="https://www.youtube.com/channel/UCfNit59pCLMfxQzRrVRrXTQ"></a>
+    <p class="byline">&copy; Dorothy Lu & Aaron Zhao</p>
+</footer>
 
 </body>
 
