--- a/proposal.html
+++ b/proposal.html
@@ -10,29 +10,32 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="js/index.js"></script>
-    <title>Proposal</title>
+    <title>Home</title>
 </head>
 
 <body>
-     
-     <!-- Navbar on small screens -->
-     <nav id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:60px">
-        <a href="booking.html" class="navLink" onclick="navToggle()">BOOKING</a>
+    <!-- Navbar on small screens -->
+    <nav id="nav" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:60px">
         <a href="proposal.html" class="navLink" onclick="navToggle()">PROPOSAL</a>
+        <a href="engage.html" class="navLink" onclick="navToggle()">ENGAGE</a>
+        <a href="booking.html" class="navLink" onclick="navToggle()">BOOKING</a>
+        <a href="about.html" class="navLink" onclick="navToggle()">ABOUT</a>
         <a href="signin.html" class="navLink">SIGN IN</a>
     </nav>
 
     <!-- Navbar -->
     <nav class="w3-top">
         <div class="w3-bar w3-card transparentNav">
-            <a class="navLink w3-hide-medium w3-hide-large w3-right"
-                href="javascript:void(0)" onclick="navToggle()" title="Toggle Navigation Menu"><i
-                    class="fa fa-bars"></i></a>
-            <a href="index.html" class="navLink" ><img src="img/logo-new.png" class="homeLogo"></a>
+            <a class="navLink w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="navToggle()"
+                title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+            <a href="index.html" class="navLink"><img src="img/logo-new.png" class="homeLogo"></a>
             <!--<a href="index.html" class="navLink">HOME</a>-->
-            <a href="booking.html" class="navLink w3-hide-small">BOOKING</a>
             <a href="proposal.html" class="navLink w3-hide-small">PROPOSAL</a>
+            <a href="engage.html" class="navLink w3-hide-small">ENGAGE</a>
+            <a href="booking.html" class="navLink w3-hide-small">BOOKING</a>
+            <a href="about.html" class="navLink w3-hide-small">ABOUT</a>
             <a href="signin.html" class="navLink signIn w3-hide-small">SIGN IN</a>
         </div>
     </nav>
