--- a/booking.html
+++ b/booking.html
@@ -42,15 +42,8 @@
         </div>
     </nav>
 
-    <!-- Image -->
-    <div class="w3-content" style="max-width:2000px;">
-        <div class="w3-display-container w3-center">
-            <img src="img/cover-photo.png" class="banner" alt="Minidoka 2017">
-        </div>
-    </div>
-
     <!-- Page Content -->
-    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="intro">
+    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px; margin-top: 90px;" id="intro">
         <h2 class="w3-wide">Book a Performance</h2>
         <p class="w3-justify w3-center">
             If you would like us to perform for your event, please fill out this form! The honorary price for a
