--- a/engage.html
+++ b/engage.html
@@ -40,6 +40,13 @@
         </div>
     </nav>
 
+    <div class="w3-container w3-content w3-center" style="max-width:800px; margin-top: 90px;" id="intro">
+        <h2>JOIN US</h2>
+        <p class="justify">
+            We'd be happy if you could stop by and say hello!  Feel free to add our Google calendar to keep up with our upcoming events!
+        </p>
+    </div>
+
         <!-- Embedded Google Calendar -->
         <div id="calendar" class="w3-display-container">
             <div>
