--- a/about.html
+++ b/about.html
@@ -39,4 +39,38 @@
             <a href="signin.html" class="navLink signIn w3-hide-small">SIGN IN</a>
         </div>
     </nav>
+
+    <!-- Content -->
+    <!-- Maybe make a side-scrolling slideshow of officers?? -->
+    <div class="w3-black" style="padding-top: 90px;">
+        <div class="w3-container w3-content w3-padding-64 w3-center" style="max-width:800px; ">
+            <h2 class="w3-wide">ABOUT</h2>
+            <p>
+                We are University of Washington's taiko drumming group, founded in 2013 by the Matsudaira sisters. Our
+                goal is to promote and spread Japanese culture through the art of Japanese drumming (and have an awesome
+                time doing it!).
+            </p>
+        </div>
+    </div>
+
+    <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+        <!-- Contact Taiko -->
+        <div class="w3-container w3-content" style="max-width:800px" id="contact">
+            <h2 class="w3-wide w3-center">CONTACT</h2>
+            <div class="w3-row w3-center  w3-padding-32">
+                <div class="w3-col w3-large w3-margin-bottom">
+                    <i class="fa fa-map-marker" style="width:30px"></i>Seattle, WA 98105 United States<br>
+                    <i class="fa fa-phone" style="width:30px"></i> Phone: 425-879-6802<br>
+                    <i class="fa fa-envelope" style="width:30px"> </i> Email: uwtaiko@gmail.com<br>
+                </div>
+            </div>
+        </div>
+
+        <!-- Social Media Links -->
+        <a class="fa fa-facebook-official w3-hover-opacity" href="https://www.facebook.com/uwtaikokai/"></a>
+        <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/taikokai/"></a>
+        <a class="fa fa-youtube w3-hover-opacity" href="https://www.youtube.com/channel/UCfNit59pCLMfxQzRrVRrXTQ"></a>
+        <p class="byline">&copy; Dorothy Lu & Aaron Zhao</p>
+        </p>
+    </footer>
 </body>
