--- a/taikoresources.html
+++ b/taikoresources.html
@@ -41,6 +41,14 @@
     </nav>
 
     <!-- Content Goes Here -->
+    <div class="w3-black" style="padding-top: 90px;">
+        <div class="w3-container w3-content w3-padding-64 w3-center" style="max-width:800px; ">
+            <h2 class="w3-wide">Resources</h2>
+            <p>
+                This is a work in progress :)
+            </p>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
