Finished part of stage 3

--- a/booking.html
+++ b/booking.html
@@ -13,7 +13,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.3/fetch.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.js"></script>
     <script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="js/index.js"></script>
     <title>Performance Booking</title>
 </head>
 
@@ -59,8 +58,8 @@
         </p>
         <!-- Booking Form -->
         <section class="booking-form">
-            <!-- action="after_booking.html" -->
-            <form id="booking-form" name="booking-form">
+            
+            <form id="booking-form" name="booking-form" action="after_booking.html">
                 <label for="name" class="w3-left">Name/Organization</label>
                 <input type="text" id="name" name="name" placeholder="Name" value="">
                 <label for="event" class="w3-left">Name of Event</label>
