--- a/adminbooking.html
+++ b/adminbooking.html
@@ -43,32 +43,32 @@
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px; margin-top:46px">
         <h2 class="w3-center">PERFORMANCE REQUESTS</h2>
         <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
-            <div class="w3-margin-bottom">
+            <div id="pending-booking" class="w3-margin-bottom">
                 <div class="w3-container w3-center" style="border: rgb(189, 189, 189) solid 1px;">
-                    <p><b>Hiking Club WTA Volunteering</b></p>
-                    <p>By Hiking Club at UW</p>
-                    <p>Contact Information: <a href="mailto:uwtaiko@gmail.com">Email:
+                    <p id="eventName"><b>Hiking Club WTA Volunteering</b></p>
+                    <p id="orgName">By Hiking Club at UW</p>
+                    <p id="contact">Contact Information: <a href="mailto:uwtaiko@gmail.com">Email:
                             uwtaiko@gmail.com</a></p>
-                    <p>Purposed Price: 100 USD</p>
-                    <p>@: UW Intellectual House</p>
-                    <p>Additional Message: Dinner included!</p>
+                    <p id="price">Purposed Price: 100 USD</p>
+                    <p id="location">@: UW Intellectual House</p>
+                    <p id="message">Additional Message: Dinner included!</p>
                     <p class="w3-opacity">May 20 6-8 PM</p>
-                    <button class="basicButton">Accept</button>
-                    <button class="basicButton">Remove</button>
+                    <button id="accept" class="basicButton">Accept</button>
+                    <button id="remove" class="basicButton">Remove</button>
                 </div>
             </div>
-            <div class="w3-margin-bottom">
+            <div id="pending-booking" class="w3-margin-bottom">
                 <div class="w3-container w3-center" style="border: rgb(189, 189, 189) solid 1px;">
-                    <p><b>IUGA Game Night</b></p>
-                    <p>By Informatics Undergraudate Association</p>
-                    <p>Contact Information: <a href="mailto:uwtaiko@gmail.com">Email:
+                    <p id="eventName"><b>IUGA Game Night</b></p>
+                    <p id="orgName">By Informatics Undergraudate Association</p>
+                    <p id="contact">Contact Information: <a href="mailto:uwtaiko@gmail.com">Email:
                             uwtaiko@gmail.com</a></p>
-                    <p>Purposed Price: 50 USD</p>
-                    <p>MGH 066</p>
-                    <p>Additional Message: Dinner included!</p>
+                    <p id="price">Purposed Price: 50 USD</p>
+                    <p id="location">MGH 066</p>
+                    <p id="message">Additional Message: Dinner included!</p>
                     <p class="w3-opacity">Apirl 22nd 6-8 PM</p>
-                    <button class="basicButton">Accept</button>
-                    <button class="basicButton">Remove</button>
+                    <button id="accept" class="basicButton">Accept</button>
+                    <button id="remove" class="basicButton">Remove</button>
                 </div>
             </div>
         </div>
