--- a/adminbooking.html
+++ b/adminbooking.html
@@ -42,7 +42,7 @@
 
     <div class="w3-container w3-content w3-padding-64" style="max-width:800px; margin-top:46px">
         <h2 class="w3-center">PERFORMANCE REQUESTS</h2>
-        <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+        <div class="w3-row-padding w3-padding-32" style="margin:0 -16px" id="requests">
             <div id="pending-booking" class="w3-margin-bottom">
                 <div class="w3-container w3-center" style="border: rgb(189, 189, 189) solid 1px;">
                     <p id="eventName"><b>Hiking Club WTA Volunteering</b></p>
@@ -50,11 +50,11 @@
                     <p id="contact">Contact Information: <a href="mailto:uwtaiko@gmail.com">Email:
                             uwtaiko@gmail.com</a></p>
                     <p id="price">Purposed Price: 100 USD</p>
-                    <p id="location">@: UW Intellectual House</p>
+                    <p id="location">UW Intellectual House</p>
                     <p id="message">Additional Message: Dinner included!</p>
                     <p class="w3-opacity">May 20 6-8 PM</p>
-                    <button id="accept" class="basicButton">Accept</button>
-                    <button id="remove" class="basicButton">Remove</button>
+                    <button id="accept" class="basicButton" onclick="accept(this)">Accept</button>
+                    <button id="remove" class="basicButton" onclick="remove(this)">Remove</button>
                 </div>
             </div>
             <div id="pending-booking" class="w3-margin-bottom">
@@ -67,8 +67,8 @@
                     <p id="location">MGH 066</p>
                     <p id="message">Additional Message: Dinner included!</p>
                     <p class="w3-opacity">Apirl 22nd 6-8 PM</p>
-                    <button id="accept" class="basicButton">Accept</button>
-                    <button id="remove" class="basicButton">Remove</button>
+                    <button id="accept" class="basicButton" onclick="accept(this)">Accept</button>
+                    <button id="remove" class="basicButton" onclick="remove(this)">Remove</button>
                 </div>
             </div>
         </div>
@@ -77,13 +77,13 @@
     <div class="w3-black">
         <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
             <h2 class="w3-center">SCHEDULED PERFORMANCES</h2>
-            <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+            <div class="w3-row-padding w3-padding-32" style="margin:0 -16px" id="allPerformance">
                 <div class="w3-margin-bottom">
                     <div class="w3-container w3-white w3-center">
                         <p><b>NSU Day Of Rememberance</b></p>
                         <p>UW Intellectual House</p>
-                        <p class="w3-opacity">Feburary 20 6-8 PM</p>
-                        <button class="basicButton">Remove</button>
+                        <p class="w3-opacity">Feburary 20 6-8 PM</p>    
+                        <button class="basicButton" onclick="remove(this)">Remove</button>
                     </div>
                 </div>
                 <div class="w3-margin-bottom">
@@ -91,7 +91,7 @@
                         <p><b>TOSA Carnival</b></p>
                         <p>UW HUB Ballroom</p>
                         <p class="w3-opacity">Feburary 22nd 3-8 PM</p>
-                        <button class="basicButton">Remove</button>
+                        <button class="basicButton" onclick="remove(this)">Remove</button>
                     </div>
                 </div>
                 <div class="w3-margin-bottom">
@@ -99,7 +99,7 @@
                         <p><b>Sakura-Con</b></p>
                         <p>Washington State Convention Center</p>
                         <p class="w3-opacity">April 11th 10-11 AM</p>
-                        <button class="basicButton">Remove</button>
+                        <button class="basicButton" onclick="remove(this)">Remove</button>
                     </div>
                 </div>
             </div>
